HelloWorld/force-app/main/default/objects/Student__c/fields/Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Application_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Form</label>
    <referenceTo>Application_Form__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>