HelloWorld/force-app/main/default/objects/Student__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <formula>Application_Form__r.College__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College Name</label>
    <type>Text</type>
</CustomField>